# 2026_FOUGEROLLE_TernaryRFonctions

./: .gitignore  AppConfig.cpp  AppConfig.h  AppController.cpp  AppController.h  CAD_Scene.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GLScene.cpp  GLScene.h  ImplicitObjects.cpp  ImplicitObjects.h  LICENSE  MarchingCubes.cpp  MarchingCubes.h  Mesh.cpp  Mesh.h  NeighborMesh.cpp  NeighborMesh.h  README.md  Rfunctions.cpp  Rfunctions.h  config.yaml  launch.vs.json  main.cpp
.github/: CODEOWNERS
